@startuml
skinparam classAttributeIconSize 0

class Client {
    - dni: String
    - nombre: String
    - pin: String
    - intentosFallidos: int
    - bloqueado: boolean

    + setDni(dni: String)
    + setPin(pin: String)
    + setNombre(nombre: String)
    + getDni(): String
    + getNombre(): String
    + isBloqueado(): boolean
}

class Compte{
    # numero: String
    # titular: String
    # saldo: double
    # interesesAnuales: double
    {static} - contador: int
    {static} - prefijo: String

    + Cuenta()
    + Cuenta(saldo: double)
    + calculaInteresAnual(): double
    + ingresar(cantidad: double): void
    + retirar(cantidad: double): boolean
    + transferencia(destino: Cuenta, cantidad: double): boolean
    + getNumero(): String
    + getSaldo(): double
}

class Banc {
    - nombre: String
    -clients
    -comptes
    +validarPin
    +ingressar
    +retirar+transferencia
}

class CompteCorrent {
    - limiteDescubierto: double
}

class CompteEstalvi {
    - saldoMinimo: double
}

class Cajero {
    + validarPin(c: Cliente, pin: String): boolean
    + consultarSaldo(cta: Cuenta): double
}


Client "1" -- "1..*" Compte : es titular de >
Banc "1" *-- "*" Client : tiene >
Banc "1" *-- "*" Compte : gestiona >
Cajero --> Banc : conectado a
Cajero --> Client : interactúa con

Compte <|-- CompteCorrent
Compte <|-- CompteEstalvi

@enduml